--- a/assets/movies.html
+++ b/assets/movies.html
@@ -103,9 +103,8 @@
 
         </div>
         <div id="resultsDiv"></div>
-
+        <div id="restart"></div>
     </div>
-
     <footer class="navbar fixed-bottom justify-content-md-center">
         <p>
             powered by:
